--- a/footer.html
+++ b/footer.html
@@ -38,9 +38,10 @@
             <a href="">Terms of Services</a> | <a href="">Privacy Policy</a>
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
-            <a href=""><i class="fa fa-fw fa-facebook"></i></a>
+            <a href=""><i class="fa fa-fw fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/rimonecharge"><i class="fa fa-fw fa-linkedin"></i></a>
             <a href="https://www.instagram.com/rimonecharge/"><i class="fa fa-fw fa-instagram"></i></a>
-            <a href=""><i class="fa fa-fw fa-twitter"></i></a>
+            <a href="https://twitter.com/rimonecharge"><i class="fa fa-fw fa-twitter"></i></a>
         </div>
     </div>
 
