--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" type="text/css" href="#">
     <link href="assets/font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
+    <!--heatmap tracking code -->
+	<script>(function(h,e,a,t,m,p) {
+    m=e.createElement(a);m.async=!0;m.src=t;
+    p=e.getElementsByTagName(a)[0];p.parentNode.insertBefore(m,p);
+    })(window,document,'script','https://u.heatmap.it/log.js');
+    </script>
+	 
+	 
+	 
     <!-- Favicon tab logo code -->
 	<link rel= "icon" href= "assets/images/Footer/logo.png">
 	
