--- a/footer.html
+++ b/footer.html
@@ -39,7 +39,7 @@
         </div>
         <div class="social col-md-4 col-sm-4 col-xs-12">
             <a href=""><i class="fa fa-fw fa-facebook"></i></a>
-            <a href="https://www.linkedin.com/in/rimonecharge"><i class="fa fa-fw fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/company/rimonecharge"><i class="fa fa-fw fa-linkedin"></i></a>
             <a href="https://www.instagram.com/rimonecharge/"><i class="fa fa-fw fa-instagram"></i></a>
             <a href="https://twitter.com/rimonecharge"><i class="fa fa-fw fa-twitter"></i></a>
         </div>
